<!--
/**
 * Based on a sample file from:
 * Copyright 2016 Google Inc. All Rights Reserved.
 * Apache 2.0 licence: http://www.apache.org/licenses/LICENSE-2.0
 *
 * Modifications
 * Description : adapts strings and UI to IcyNote App and adds Google Drive Access.
 * 2016 IcyNote/Julien Harbulot
 * 2016 IcyNote/Kim Lan Phan Hoang
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="2"
        android:gravity="center|top"
        android:text="@string/email_password_title_text"
        android:drawableTop="@drawable/icynote_lockup_400"
        />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_icynote_lockup"
            android:src="@drawable/icynote_lockup_400" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/email_password_title_text"/>
&lt;!&ndash;
        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Icynote User ID: 123456789abc"
            android:textColor="@color/black" />
&ndash;&gt;
    </LinearLayout>-->



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/field_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/email_sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:background="@color/backgroundButton"
                android:layout_margin="5dp"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/email_create_account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:background="@color/backgroundButton"
                android:layout_margin="5dp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
