...

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/searchBar"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/loading"
                android:visibility="visible"
                android:enabled="false"
                android:imeOptions="actionDone"/>
...
